More gems need to be locked, for in order to get ruby 1.9.3 working.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 rvm:
-  - 1.9.3
-  - 2.0
-  - 2.1
-  - jruby
+  - 1.9.3 # 1.9.3-p551
+  - 2.0   # 2.0.0-p598
+  - 2.1   # 2.1.5
+  - jruby # jruby-1.7.19
