--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: [ '2.0', '2.1', '2.2', '2.3', '2.4', '2.5', '2.6', '2.7', 'jruby' ]
+        ruby: [ '2.1', '2.2', '2.3', '2.4', '2.5', '2.6', '2.7', '3.0', '3.1', 'jruby' ]
         task: [ 'bundle exec rake' ]
     name: Ruby ${{ matrix.ruby }} - ${{ matrix.task }}
     steps:
